refactor: OpenAPI定義を刷新
副次的に
- テストコードでSQLの内部変数を直接扱っていた代わりにNewファクトリ関数の引数を改善してトランザクションも受け取れるようにした
  - SQLのstructの内部変数を統一する必要があった
  - 結合テストコードのpackage名を当初の思惑通りrepository_testに変更できた
- assertパッケージを削除
  - デバック中に気づいて、型不整合が無視されているような気がした、出力が見にくい
- apiパッケージをoapiに改名
  - 置き換えが分かりやすくなるため
- 結合テストと普通のテストを分離
  - 今まで通りのコマンドでは結合テストは実行されない
  - go-backend/READMEに書いてある通り
  - go build tagを使用しているため、vscodeでwarningを消すために.vscode/settingsを一緒にコミット
