# openapi.1.0.yaml
@@ -82,7 +82,7 @@ paths:
           content:
             application/json:
               schema:
-                $ref: '#/components/schemas/User'
+                $ref: '#/components/schemas/UserResponse'
         '401':
           description: Access is unauthorized.
           content:
@@ -151,7 +151,7 @@ paths:
         content:
           application/json:
             schema:
-              $ref: '#/components/schemas/UserCreate'
+              $ref: '#/components/schemas/UserResister'
   /plans:
     post:
       operationId: generatePlan
@@ -164,7 +164,7 @@ paths:
           content:
             text/event-stream:
               schema:
-                $ref: '#/components/schemas/Plan'
+                $ref: '#/components/schemas/PlanResponse'
         '400':
           description: The server could not understand the request due to invalid syntax.
           content:
@@ -194,84 +194,7 @@ paths:
         content:
           application/json:
             schema:
-              type: object
-              properties:
-                prompt:
-                  type: string
-              required:
-                - prompt
-  /reviews:
-    get:
-      operationId: getReviewsBySpotId
-      summary: 観光スポットのレビュー一覧の取得
-      description: 指定した観光スポットのレビュー一覧を取得します。
-      parameters:
-        - name: spotId
-          in: query
-          required: true
-          schema:
-            type: string
-          explode: false
-      responses:
-        '200':
-          description: The request has succeeded.
-          content:
-            application/json:
-              schema:
-                type: array
-                items:
-                  $ref: '#/components/schemas/Review'
-        '500':
-          description: Server error
-          content:
-            application/json:
-              schema:
-                type: object
-                required:
-                  - message
-                properties:
-                  message:
-                    type: string
-      tags:
-        - Reviews
-    post:
-      operationId: createReview
-      summary: レビューの投稿
-      description: 新しいレビューを投稿します。
-      parameters: []
-      responses:
-        '201':
-          description: The request has succeeded and a new resource has been created as a result.
-        '400':
-          description: The server could not understand the request due to invalid syntax.
-          content:
-            application/json:
-              schema:
-                type: object
-                required:
-                  - message
-                properties:
-                  message:
-                    type: string
-        '500':
-          description: Server error
-          content:
-            application/json:
-              schema:
-                type: object
-                required:
-                  - message
-                properties:
-                  message:
-                    type: string
-      tags:
-        - Reviews
-      requestBody:
-        required: true
-        content:
-          application/json:
-            schema:
-              $ref: '#/components/schemas/Review'
+              $ref: '#/components/schemas/Prompt'
   /spots:
     get:
       operationId: getAllSpots
@@ -286,7 +209,7 @@ paths:
               schema:
                 type: array
                 items:
-                  $ref: '#/components/schemas/Spot'
+                  $ref: '#/components/schemas/SpotResponse'
         '500':
           description: Server error
           content:
@@ -308,6 +231,10 @@ paths:
       responses:
         '201':
           description: The request has succeeded and a new resource has been created as a result.
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/SpotResponse'
         '400':
           description: The server could not understand the request due to invalid syntax.
           content:
@@ -337,25 +264,25 @@ paths:
         content:
           application/json:
             schema:
-              $ref: '#/components/schemas/Spot'
-  /spots/{id}:
+              $ref: '#/components/schemas/SpotResister'
+  /spots/{spotId}:
     get:
       operationId: getSpotById
       summary: 観光スポットの詳細取得
       description: 指定したIDの観光スポットの詳細情報を取得します。
       parameters:
-        - name: id
+        - name: spotId
           in: path
           required: true
           schema:
-            type: string
+            $ref: '#/components/schemas/Uuid'
       responses:
         '200':
           description: The request has succeeded.
           content:
             application/json:
               schema:
-                $ref: '#/components/schemas/Spot'
+                $ref: '#/components/schemas/SpotResponse'
         '404':
           description: The server cannot find the requested resource.
           content:
@@ -385,18 +312,18 @@ paths:
       summary: 観光スポットの更新
       description: 指定したIDの観光スポットの情報を更新します。
       parameters:
-        - name: id
+        - name: spotId
           in: path
           required: true
           schema:
-            type: string
+            $ref: '#/components/schemas/Uuid'
       responses:
         '200':
           description: The request has succeeded.
           content:
             application/json:
               schema:
-                $ref: '#/components/schemas/Spot'
+                $ref: '#/components/schemas/SpotResponse'
         '400':
           description: The server could not understand the request due to invalid syntax.
           content:
@@ -437,7 +364,89 @@ paths:
         content:
           application/json:
             schema:
-              $ref: '#/components/schemas/Spot'
+              $ref: '#/components/schemas/SpotUpdate'
+  /spots/{spotId}/reviews:
+    get:
+      operationId: getReviewsBySpotId
+      summary: 観光スポットのレビュー一覧の取得
+      description: 指定した観光スポットのレビュー一覧を取得します。
+      parameters:
+        - name: spotId
+          in: path
+          required: true
+          schema:
+            $ref: '#/components/schemas/Uuid'
+      responses:
+        '200':
+          description: The request has succeeded.
+          content:
+            application/json:
+              schema:
+                type: array
+                items:
+                  $ref: '#/components/schemas/ReviewResponse'
+        '500':
+          description: Server error
+          content:
+            application/json:
+              schema:
+                type: object
+                required:
+                  - message
+                properties:
+                  message:
+                    type: string
+      tags:
+        - Spots
+        - Reviews
+    post:
+      operationId: createReview
+      summary: レビューの投稿
+      description: 新しいレビューを投稿します。
+      parameters:
+        - name: spotId
+          in: path
+          required: true
+          schema:
+            $ref: '#/components/schemas/Uuid'
+      responses:
+        '201':
+          description: The request has succeeded and a new resource has been created as a result.
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/ReviewResponse'
+        '400':
+          description: The server could not understand the request due to invalid syntax.
+          content:
+            application/json:
+              schema:
+                type: object
+                required:
+                  - message
+                properties:
+                  message:
+                    type: string
+        '500':
+          description: Server error
+          content:
+            application/json:
+              schema:
+                type: object
+                required:
+                  - message
+                properties:
+                  message:
+                    type: string
+      tags:
+        - Spots
+        - Reviews
+      requestBody:
+        required: true
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/ReviewResister'
 components:
   schemas:
     JWTAuth:
@@ -448,19 +457,13 @@ components:
         token:
           type: string
           description: JWTトークン
-    Plan:
+    PlanResponse:
       type: object
       required:
-        - id
         - name
         - description
         - spots
-        - createdAt
       properties:
-        id:
-          type: string
-          description: プランの一意の識別子
-          readOnly: true
         name:
           type: string
           description: プランの名称
@@ -470,31 +473,50 @@ components:
         spots:
           type: array
           items:
-            $ref: '#/components/schemas/Spot'
+            $ref: '#/components/schemas/SpotResponse'
           description: プランに含まれる観光スポットのリスト
-        createdAt:
-          type: string
-          description: 作成日時
-          readOnly: true
-    Review:
+    Prompt:
       type: object
       required:
-        - id
+        - prompt
+      properties:
+        prompt:
+          type: string
+          description: 旅行の希望や条件
+    ReviewResister:
+      type: object
+      required:
+        - userId
+        - rating
+        - comment
+      properties:
+        userId:
+          type: string
+          description: レビューを投稿したユーザーの識別子
+        rating:
+          type: integer
+          minimum: 1
+          maximum: 5
+          description: レビューの評価（1から5までの整数）
+        comment:
+          type: string
+          description: レビューのコメント
+    ReviewResponse:
+      type: object
+      required:
         - userId
         - spotId
         - rating
         - comment
         - createdAt
       properties:
-        id:
-          type: string
-          description: レビューの一意の識別子
-          readOnly: true
         userId:
-          type: string
+          allOf:
+            - $ref: '#/components/schemas/Uuid'
           description: レビューを投稿したユーザーの識別子
         spotId:
-          type: string
+          allOf:
+            - $ref: '#/components/schemas/Uuid'
           description: レビュー対象の観光スポットの識別子
         rating:
           type: integer
@@ -506,9 +528,25 @@ components:
           description: レビューのコメント
         createdAt:
           type: string
-          description: 作成日時
-          readOnly: true
-    Spot:
+          format: date-time
+          description: レビューの作成日時
+    SpotResister:
+      type: object
+      required:
+        - name
+        - description
+        - address
+      properties:
+        name:
+          type: string
+          description: 観光スポットの名称
+        description:
+          type: string
+          description: 観光スポットの説明
+        address:
+          type: string
+          description: 観光スポットの所在地
+    SpotResponse:
       type: object
       required:
         - id
@@ -518,9 +556,9 @@ components:
         - createdAt
       properties:
         id:
-          type: string
+          allOf:
+            - $ref: '#/components/schemas/Uuid'
           description: 観光スポットの一意の識別子
-          readOnly: true
         name:
           type: string
           description: 観光スポットの名称
@@ -532,31 +570,21 @@ components:
           description: 観光スポットの所在地
         createdAt:
           type: string
-          description: 作成日時
-          readOnly: true
-    User:
+          format: date-time
+          description: 作成日時(utc unix timestamp)
+    SpotUpdate:
       type: object
-      required:
-        - id
-        - username
-        - email
-        - createdAt
       properties:
-        id:
+        name:
           type: string
-          description: ユーザーの一意の識別子
-          readOnly: true
-        username:
+          description: 観光スポットの名称
+        description:
           type: string
-          description: ユーザー名
-        email:
+          description: 観光スポットの説明
+        address:
           type: string
-          description: メールアドレス
-        createdAt:
-          type: string
-          description: 作成日時
-          readOnly: true
-    UserCreate:
+          description: 観光スポットの所在地
+    UserResister:
       type: object
       required:
         - username
@@ -571,7 +599,27 @@ components:
           description: メールアドレス
         password:
           type: string
-          description: パスワード（登録時のみ使用、読み取り不可）
+          format: password
+          description: パスワード
+    UserResponse:
+      type: object
+      required:
+        - id
+        - username
+        - email
+      properties:
+        id:
+          type: string
+          description: ユーザーの一意の識別子
+        username:
+          type: string
+          description: ユーザー名
+        email:
+          type: string
+          description: メールアドレス
+    Uuid:
+      type: string
+      format: uuid
   securitySchemes:
     BearerAuth:
       type: http
